# API/GreenZone.API/Controllers/AdminPanel/AdminProductController.cs
@@ -8,7 +8,7 @@ using Microsoft.AspNetCore.Mvc;
 
 namespace GreenZone.API.Controllers.AdminPanel
 {
-    [Route("api/[controller]")]
+    [Route("api/admin/[controller]")]
     [ApiController]
     [Authorize(Roles = "Admin")]
     public class AdminProductController : ControllerBase
